# kubernety

./: CHANGELOG.md  README.md  pyproject.toml
src/kubernety/: gui.py  main.py  pods.py
